<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2017-2025 WireGuard LLC. All Rights Reserved.
  ~ SPDX-License-Identifier: Apache-2.0
  -->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="settings">
    <com.wireguard.android.preference.VersionPreference
        android:icon="@mipmap/ic_launcher"
        android:key="version" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="restore_on_boot"
        android:singleLineTitle="false"
        android:summaryOff="@string/restore_on_boot_summary_off"
        android:summaryOn="@string/restore_on_boot_summary_on"
        android:title="@string/restore_on_boot_title" />
    <com.wireguard.android.preference.ZipExporterPreference android:key="zip_exporter" />
    <com.wireguard.android.preference.QuickTilePreference android:key="quick_tile" />
    <Preference
        android:key="log_viewer"
        android:singleLineTitle="false"
        android:summary="@string/log_viewer_pref_summary"
        android:title="@string/log_viewer_pref_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="dark_theme"
        android:singleLineTitle="false"
        android:summaryOff="@string/dark_theme_summary_off"
        android:summaryOn="@string/dark_theme_summary_on"
        android:title="@string/dark_theme_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="allow_remote_control_intents"
        android:singleLineTitle="false"
        android:summaryOff="@string/allow_remote_control_intents_summary_off"
        android:summaryOn="@string/allow_remote_control_intents_summary_on"
        android:title="@string/allow_remote_control_intents_title" />

</androidx.preference.PreferenceScreen>
